# design-patterns-cpp

./: .gitignore  CMakeLists.txt  README.md
abstract_factory/: README.md  abstract_factory.h
abstract_factory/example/: example_abstract_factory.cpp
adapter/: README.md  adapter.h
adapter/example/: example_adapter.cpp
bridge/: README.md  bridge.h
bridge/example/: example_bridge.cpp  example_bridge.h
builder/: README.md  builder.h
builder/example/: example_builder.cpp
chain_of_responsibility/: README.md  chain_of_responsibility.h
chain_of_responsibility/example/: example_chain_of_responsibility.cpp
command/: CMakeLists.txt  README.md  command.h
command/example/: example_command.cpp
composite/: README.md  composite.h
composite/example/: example_composite.cpp
decorator/: README.md  decorator.h
decorator/example/: example_decorator.cpp  example_decorator.h
facade/: README.md  facade.h
facade/example/: example_facade.cpp
factory_method/: README.md  factory_method.h
flyweight/: README.md  flyweight.h
interpreter/: README.md  interpreter.h
iterator/: README.md  iterator.h
iterator/example/: example_iterator.cpp
mediator/: README.md  mediator.h
memento/: README.md  memento.h
null_object/: README.md  null_object.h
object_pool/: README.md  object_pool.h
observer/: README.md  observer.h
prototype/: README.md  prototype.h
proxy/: README.md  proxy.h
singleton/: README.md  singleton.h
state/: README.md  state.h
strategy/: README.md  strategy.h
template_method/: README.md  template_method.h
visitor/: README.md  visitor.h
(+16 files in other folders)
